--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Kitchen/Index2.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Kitchen/Index2.cshtml
@@ -52,7 +52,6 @@
                                     <tr ng-if="item.Notes != null && item.Notes != ''">
                                         <td colspan="3" style="color:gray">{{item.Notes}}</td>
                                     </tr>
-
                                 </tbody>
 
                                 <tr ng-if="data.Status == 'Cook'">
@@ -76,9 +75,15 @@
     <div class="col-md-4">
         <h3>{{kitchenprint.TableName}}{{kitchenprint.Name}}</h3>
         <table class="table table-hover">
+            <tr>
+                <th>Menu</th>
+                <th>Qty</th>
+                <th>Notes</th>
+            </tr>
             <tr ng-repeat="data in kitchenprint.OrderItem">
                 <td>{{data.MenuName}}</td>
                 <td>{{data.Qty}}</td>
+                <td>{{data.Notes}}</td>
             </tr>
         </table>
     </div>
