--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_Layout.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_Layout.cshtml
@@ -7,8 +7,16 @@
 
     <environment names="Development">
         @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
+    
         <link href="~/lib/bootstrap/dist/css/yeti.bootstrap.css" rel="stylesheet" />
+        <link href="~/lib/datatables/media/css/jquery.dataTables.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
+        
+         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+  
+        <script src="~/lib/datatables/media/js/jquery.dataTables.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
         @*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -17,6 +25,12 @@
 
         <link href="~/lib/bootstrap/dist/css/yeti.bootstrap.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+
+        <script src="~/lib/datatables/media/js/jquery.dataTables.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
 </head>
 <body>
@@ -80,6 +94,8 @@
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/datatables/media/js/jquery.js"></script>
+        <script src="~/lib/datatables/media/js/jquery.dataTables.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
