--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer.cshtml
@@ -21,6 +21,8 @@
         <script src="~/Angular/Service.js"></script>
         <script src="~/Angular/Directive.js"></script>
 
+
+
     </environment>
     <environment names="Staging,Production">
         @*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -38,8 +40,7 @@
         <script src="~/Angular/Service.js"></script>
         <script src="~/Angular/Directive.js"></script>
 
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-        <link href="~/css/media.css" rel="stylesheet" />
+        
 
     </environment>
 
@@ -101,6 +102,8 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/bower-angular-input-masks-master/angular-input-masks-standalone.min.js"></script>
+   
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -112,6 +115,7 @@
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/bower-angular-input-masks-master/angular-input-masks-standalone.min.js"></script>
     </environment>
 
     @RenderSection("scripts", required: false)
