--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer2.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer2.cshtml
@@ -97,6 +97,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/bower-angular-input-masks-master/angular-input-masks-standalone.min.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -108,6 +109,7 @@
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/bower-angular-input-masks-master/angular-input-masks-standalone.min.js"></script>
     </environment>
 
     @RenderSection("scripts", required: false)
