--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Order/Index.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Order/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.OrderID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Finish)
             </th>
             <th>
@@ -25,7 +28,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            
+            <td>
+                @Html.DisplayFor(modelItem => item.OrderID)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Finish)
             </td>
