--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
@@ -132,7 +132,7 @@
             <div class="row">
                 <div>
                     <div style="overflow:auto;max-height:42vh">
-                        <table class="table table-hover">
+                        <table class="table table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th>
