--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Account/Login.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Account/Login.cshtml
@@ -141,7 +141,7 @@
         font-weight: bold;
     }
 
-    form .btn {
+    form .btnn {
         position: relative;
         top: 0;
         border: none;
@@ -165,7 +165,7 @@
         transition: all 0.25s ease-out 0.05s;
     }
 
-        form .btn:hover {
+        form .btnn:hover {
             top: 1px;
             box-shadow: 0 -1px 0 #feeae7,0 2px 0 #976159;
             background: -webkit-linear-gradient(top,#dfafa9,#e1b2ac);
@@ -196,7 +196,7 @@
                 </label>
             </div>
             <div>
-                <button type="submit" class="btn">SUBMIT</button>
+                <button type="submit" class="btnn">SUBMIT</button>
             </div>
             <p></p>
             <p style="color:black">
